@@ -134,6 +134,10 @@ commands:
     description: Kill all entities generated by this plugin.
     usage: /killbigdoorsentities
     permission: bigdoors.admin.killbigdoorsentities
+  setbypassprotections:
+    description: Toggles bypassing of protections for a given door.
+    usage: /setbypassprotections <doorName || doorUID> <true || false>
+    permission: bigdoors.admin.setbypassprotections
 permissions:
   bigdoors.*:
     description: Gives access to all BigDoors commands.
@@ -155,6 +159,7 @@ permissions:
       bigdoors.user.setblockstomove: true
       bigdoors.user.toggle: true
       bigdoors.user.lock: true
+      bigdoors.user.receivenotifications: true
   bigdoors.admin.*:
     description: Gives the user access to all admin-level commands of this plugin.
     children:
@@ -166,6 +171,7 @@ permissions:
       bigdoors.admin.toggledoor: true
       bigdoors.admin.bypass.*: true
       bigdoors.admin.killbigdoorsentities: true
+      bigdoors.admin.setbypassprotections: true
 
   bigdoors.admin.bypass.*:
     description: Gives the user access to door attributes (toggle, delete, etc) of doors they do not own.
