@@ -1,4 +1,6 @@
 Alpha 0.1.8.49
+- Updated database to v9.
+- Added bypass
 
 Alpha 0.1.8.48
 - Add support for MC 1.20.2.
